added cite.bib for SCQP paper

--- a/publication/symbolic-linearization-scqp/cite.bib
+++ b/publication/symbolic-linearization-scqp/cite.bib
@@ -1,10 +1,13 @@
-@inproceedings{Astudillo2021,
-  doi = {10.1016/j.ifacol.2021.11.156},
-  url = {https://doi.org/10.1016%2Fj.ifacol.2021.11.156},
-  year = 2021,
-  month = oct,
-  publisher = {Elsevier {BV}},
-  author = {Alejandro Astudillo and Justin Carpentier and Joris Gillis and Goele Pipeleers and Jan Swevers},
-  title = {Mixed Use of Analytical Derivatives and Algorithmic Differentiation for {NMPC} of Robot Manipulators},
-  booktitle = {Modeling, Estimation and Control Conference {MECC} 2021}  
+@article{Astudillo_2022a,
+	doi = {10.1109/lra.2022.3142396},
+	url = {https://doi.org/10.1109%2Flra.2022.3142396},
+	year = 2022,
+	month = {apr},
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+	volume = {7},
+	number = {2},
+	pages = {2867--2874},
+	author = {Alejandro Astudillo and Joris Gillis and Moritz Diehl and Wilm Decre and Goele Pipeleers and Jan Swevers},
+	title = {Position and Orientation Tunnel-Following {NMPC} of Robot Manipulators Based on Symbolic Linearization in Sequential Convex Quadratic Programming},
+	journal = {{IEEE} Robotics and Automation Letters}
 }
