--- a/publication/tasho/cite.bib
+++ b/publication/tasho/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{Sathya_2022tasho,
 	doi = {10.1109/iros47612.2022.9981681},
-	url = {https://doi.org/10.1109%2Firos47612.2022.9981681},
+	url = {https://doi.org/10.1109/IROS47612.2022.9981681},
 	year = 2022,
 	month = {oct},
 	publisher = {{IEEE}},
