--- a/publication/flexible-beam-manipulator/cite.bib
+++ b/publication/flexible-beam-manipulator/cite.bib
@@ -1,7 +1,7 @@
 @inproceedings{Mamedov2023flexible,
 	year = 2023,
-	doi = {10.48550/arXiv.2210.00578},
-	month = {may},
+	doi = {10.1109/ICRA48891.2023.10160493},
+	month = {05},
 	publisher = {{IEEE}},
 	author = {Shamil Mamedov and Alejandro Astudillo and Daniele Ronzani and Wilm Decre and Jean-Philippe Noël and Jan Swevers},
 	title = {An Optimal Open-Loop Strategy for Handling a Flexible Beam with a Robot Manipulator},
